--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://statistics.vr-arena.tech" />
+    <meta http-equiv="refresh" content="0; url=https://partners.vr-arena.tech" />
     <script type="text/javascript">
-      window.location.href = "https://statistics.vr-arena.tech";
+      window.location.href = "https://partners.vr-arena.tech";
     </script>
     <title>Redirect...</title>
   </head>
   <body>
-    If you are not redirected, <a href="https://statistics.vr-arena.tech">click here</a>.
+    If you are not redirected, <a href="https://partners.vr-arena.tech">click here</a>.
   </body>
 </html>
